# polarise

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  index.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
api/: data_bars.md.backup  display_export.md.backup  fashion.md.backup  formatting.md.backup  gradients.md.backup  highlighting.md.backup
api/data_bars/: index.html
api/display_export/: index.html
api/fashion/: index.html
api/formatting/: index.html
api/gradients/: index.html
api/highlighting/: index.html
assets/: Hero_presentation.html  extra.css  extra.css.backup
colors/: index.html
examples/air_quality/: index.html
examples/climate/: index.html
examples/correlation/: index.html
examples/education/: index.html
examples/finance/: index.html
examples/heatmap/: index.html
examples/llm_benchmarks/: index.html
examples/wellbeing/: index.html
getting_started/: index.html
polarise/: __init__.py  datasets.py  limits.py  selectors.py  specs.py  styler.py
polarise/engines/: condition.py  mapper.py
polarise/fashion/: grid.py  raw.py  scientific.py  zebra.py
polarise/render/: css.py  html.py
polarise/utils/: colormaps.py  colors.py  contrast.py
polarise_docs/: generate_snippets.py  mkdocs.yml
polarise_docs/docs/: colors.md  getting_started.md  index.md  main.py  tutorial.md
search/: search_index.json
tests/: test_colormaps.py  test_show.py
tools/: cpt_colormaps.md  extract_colormap.py  extract_cpt.py  extract_crameri.py  new_colormaps.md
tutorial/: index.html
(+108 files in other folders)
