[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polarise"
version = "1.1.0"
description = "A Polars-native DataFrame styling tool for HTML visualization"
authors = [{ name = "Eric Gayer" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["polars>=0.19.0"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://egayer.github.io/polarise/"
Repository = "https://github.com/egayer/polarise"

[tool.setuptools.packages.find]
where = ["."]
include = ["polarise*"]

[tool.setuptools.package-data]
polarise = ["fashion/css/*.css", "*.csv"]
